# ProjectOpenGl

./: .gitignore  CMakeLists.txt  README.md  build_configuration.cmake  vcpkg.json
Engine/: CMakeLists.txt
Engine/Game/: Game.cpp  Game.h
Engine/ImGui/: imgui_impl_opengl3.cpp  imgui_impl_opengl3_render.cpp
Engine/Scene/: Scene.cpp  Scene.h
Engine/Terrain/: Shader.cpp  Shader.h  Terrain.cpp  Terrain.h
ProceduralGeneration/: CMakeLists.txt  Grid2d.h  Grid3d.cpp  Grid3d.h  PerlinGrid2d.h  PerlinNoise.h
Src/: CMakeLists.txt  main.cpp
Src/Assets/OpenGl/: terrain.frag  terrain.vert  water.frag  water.vert
Src/ImGui/: helper.h
Src/Scenes/: MainScene.cpp  MainScene.h
Src/Terrain/: Shader.cpp  Terrain.h  Texture.h  Water.h
Tools/: CMakeLists.txt  MathUtils.h
